<resources>
    <string name="app_name">光合商城</string>
    <string name="first_menu">首页</string>
    <string name="second_menu">专题</string>
    <string name="third_menu">周边</string>
    <string name="fourth_menu">驾培</string>
    <string name="five_menu">个人</string>

    <string name="forget_pwd">
        <u>忘记密码</u>
    </string>

    <string name="to_register">
        <u>还没账号</u>
    </string>

    <string name="have_account">
        <u>请点此登陆</u>
    </string>
</resources>
