<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.wingene.mallxm.MainActivity">

    <RelativeLayout
        android:id="@+id/contentMenuV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        />

    <RadioGroup
        android:id="@+id/menuGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <RadioButton
            android:id="@+id/firstMenuV"
            style="@style/menu_style"
            android:checked="true"
            android:drawableTop="@drawable/home_selector"
            android:text="@string/first_menu"
            />

        <RadioButton
            android:id="@+id/secondMenuV"
            style="@style/menu_style"
            android:drawableTop="@drawable/special_selector"
            android:text="@string/second_menu"
            />

        <RadioButton
            android:id="@+id/thirdMenuV"
            style="@style/menu_style"
            android:drawableTop="@drawable/zhoubian_selector"
            android:text="@string/third_menu"

            />

        <RadioButton
            android:id="@+id/fourthMenuV"
            style="@style/menu_style"
            android:drawableTop="@drawable/car_selector"
            android:text="@string/fourth_menu"

            />

        <RadioButton
            android:id="@+id/fiveMenuV"
            style="@style/menu_style"
            android:drawableTop="@drawable/person_selector"
            android:text="@string/five_menu"

            />
    </RadioGroup>
</LinearLayout>
